--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@linthtml/linthtml": "^0.8.6",
+    "browser-sync": "^2.27.10",
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
     "gulp-file-include": "^2.3.0",
